--- a/my-portfolio/package.json
+++ b/my-portfolio/package.json
@@ -10,6 +10,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "react-star-sky": "^1.0.3",
+    "react-typed": "^1.2.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -39,6 +41,7 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^6.0.0"
+    "gh-pages": "^6.0.0",
+    "tailwindcss": "^3.3.3"
   }
 }
