--- a/my-portfolio/package.json
+++ b/my-portfolio/package.json
@@ -13,6 +13,7 @@
     "react-scripts": "5.0.1",
     "react-star-sky": "^1.0.3",
     "react-typed": "^1.2.0",
+    "terminal-in-react": "^4.3.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
