--- a/my-portfolio/package.json
+++ b/my-portfolio/package.json
@@ -10,11 +10,11 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-star-sky": "^1.0.3",
-    "react-typed": "^1.2.0",
+    "react-type-animation": "^3.2.0",
+    "react-typed": "^2.0.12",
     "react-vertical-timeline-component": "^3.6.0",
-    "terminal-in-react": "^4.3.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
